<resources>
    <string name="app_name">W23_G12_eCommerceApp</string>
    <string name="txtLogo">Logo</string>
    <string name="txtViewDrawer">eCommerce App</string>

    <string-array name="Tags">
        <item>Browse Products</item>
        <item>Feature 02</item>
        <item>Feature 03</item>
        <item>Feature 04</item>
        <item>Feature 05</item>
        <item>Feature 06</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="headlines">Headers</string>
    <string name="txtViewTitleFeature01">Feature 01</string>
    <string name="txtViewTitleFeature02">Account Info.</string>
    <string name="txtViewTitleFeature03">Feature 03</string>
    <string name="txtViewTitleFeature04">Feature 04</string>
    <string name="txtViewTitleFeature05">Feature 05</string>
    <string name="txtViewTitleFeature06">Feature 06</string>
    <string name="txtLogin">Existing user! Go to Login page</string>
    <string name="txtSignUp">Login</string>
    <string name="txtRegister">Register</string>
    <string name="txtForgotPassword">Forgot Password ?</string>
    <string name="btn_changePassword">Change Password</string>
    <string name="Change_password">Change Password</string>

    <string name="login_txt">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_txt">Register</string>
    <string name="already_reg">Click to Sign In!</string>
    <string name="notyet_reg">Click to Register!</string>
    <string name="logout">Logout</string>

    <string name="txtCategTitle">Select Category</string>
    <string name="addToCart">Add to Cart</string>
    <string name="viewCart">View Cart</string>
    <string name="txtViewCartTitle">Shopping Cart:</string>
    <string-array name="prod_categories">
        <item>All</item>
        <item>Arts, Crafts &amp; Sewing</item>
        <item>Automotive</item>
        <item>Baby Products</item>
        <item>Beauty &amp; Personal Care</item>
        <item>Cell Phones &amp; Accessories</item>
        <item>Clothing, Shoes &amp; Jewelry</item>
        <item>Electronics</item>
        <item>Grocery &amp; Gourmet Food</item>
        <item>Health &amp; Household</item>
        <item>Hobbies</item>
        <item>Home &amp; Kitchen</item>
        <item>Industrial &amp; Scientific</item>
        <item>Movies &amp; TV</item>
        <item>Musical Instruments</item>
        <item>Office Products</item>
        <item>Patio, Lawn &amp; Garden</item>
        <item>Pet Supplies</item>
        <item>Remote &amp; App Controlled Vehicle Parts</item>
        <item>Remote &amp; App Controlled Vehicles &amp; Parts</item>
        <item>Sports &amp; Outdoors</item>
        <item>Tools &amp; Home Improvement</item>
        <item>Toys &amp; Games</item>
        <item>Video Games</item>
    </string-array>

    <string name="txtRatingTitle">Let us know your feedback...</string>
    <string name="txtRatingSubTitle">Please rate the app on the following aspects:</string>
    <string name="txtRatingQ1">Easy to use</string>
    <string name="txtRatingQ2">Completeness of features included</string>
    <string name="txtRatingQ3">Reliability</string>
    <string name="txtRatingQ4">Overal experience</string>
    <string name="txtRatingSubmit">Submit Ratings</string>
    <string name="order_recieved">Thank You</string>
    <string name="ontheway">Your order is on the way ;)</string>
    <string name="gettohome">Get to Home</string>
    <string name="sendPass">Reset Password</string>
    <string name="btnUpdateInfo">Update</string>
    <string name="hi">"Hi, "</string>
    <string name="start">Start your journey from navigation menu</string>

</resources>